--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400&display=swap");
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -10,8 +10,8 @@
 /*font-family: 'Poppins', sans-serif;*/
 
 /* navbar css */
-.navbar{
-  font-family: 'Poppins', sans-serif;
+.navbar {
+  font-family: "Poppins", sans-serif;
   font-size: 17px;
   line-height: 26px;
   text-transform: uppercase;
@@ -19,38 +19,35 @@
   border-bottom: 0px solid gray !important;
 }
 
-.nav-link{
+.nav-link {
   font-weight: 400 !important;
 }
-.active{
+.active {
   border-bottom: 1px solid black;
 }
-.navbar-brand{
+.navbar-brand {
   font-weight: 700;
-  font-family: 'roboto', sans-serif;
+  font-family: "roboto", sans-serif;
   letter-spacing: 2px;
 }
 
-
 /* ===========================
 ======= footer css ===========*/
-.footer{
+.footer {
   color: white;
   padding: 25px;
   background-color: rgb(31, 31, 62);
- 
 }
 
-.footer a{
+.footer a {
   text-decoration: none;
   color: white;
   padding: 10px;
 }
 
-.footer a:hover{
+.footer a:hover {
   color: antiquewhite;
   border-bottom: 1px solid snow;
-
 }
 
 /* =================================
@@ -96,17 +93,22 @@
   justify-content: center;
 }
 
-#contactus-img{
+#contactus-img {
   height: 60vh;
 }
 
 /* ===========================
  =========contact us ========= */
 
- .register{
+.register {
   height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
- }
+}
+/*==================*/
+.product-link {
+  text-decoration: none;
+  color: black;
+}
